Feat : new category input

--- a/.env.development.local
+++ b/.env.development.local
@@ -7,3 +7,4 @@ POSTGRES_URL="postgres://default:9yOKYTcEh4GJ@ep-mute-mud-a5jff5r1-pooler.us-eas
 POSTGRES_URL_NON_POOLING="postgres://default:9yOKYTcEh4GJ@ep-mute-mud-a5jff5r1.us-east-2.aws.neon.tech/verceldb?sslmode=require"
 POSTGRES_URL_NO_SSL="postgres://default:9yOKYTcEh4GJ@ep-mute-mud-a5jff5r1-pooler.us-east-2.aws.neon.tech/verceldb"
 POSTGRES_USER="default"
+GENERATE_SOURCEMAP=false
